# QCxMS

./: CONTRIBUTING.md  README.md  meson.build  meson_options.txt  qcxms.in
.github/workflows/: build.yml
config/: meson.build
include/: param_d4.fh  pars.fh
share/examples/CID/Dichlorobenzamide/: coord  qcxms.in
share/examples/CID/Tetrahydrofuran/: coord  qcxms.in
share/examples/EI/2-Chloroethanol_GFN2/: coord  qcxms.in
share/examples/EI/Monoethanolamine_GFN1/: coord  qcxms.in
src/: Makefile  analyse.f90  atomic_masses.f90  boxmuller.f90  callxtb.f90  cid.f90  cid_module.f90  cidcommon.f90  common1.f90  copyc6.f90  covalent_radii.f90  d3common.f90  dftb.f90  dftd3.f90  dftd4.f90  diag3x3.f90  egrad.f90  elem.f90  fragments.f90  gcp.f90  geteps.f90  iee.f90  impact.f90  info.f90  iniqm.f90  input.f90  main.F90  main.f90  mass.f90  md.f90  mdinit.f90  meson.build  mndo.f90  mo_energ.f90  mo_spec.f90  mopac.f90  msindo.f90  newcommon.f90  orca.f90  prmat.f90  (+13 more)
subprojects/: dftd4.wrap  rmsd-tool.wrap  s-dftd3.wrap  tblite.wrap  toml-f.wrap
