# This file is part of QCxMS.

option(
  'lapack',
  type: 'combo',
  value: 'auto',
  yield: true,
  choices: ['auto', 'mkl', 'mkl-rt', 'openblas', 'netlib'],
  description : 'linear algebra backend',
)

option(
  'openmp',
  type: 'boolean',
  value: true,
  yield: true,
  description: 'use OpenMP parallelisation',
)

option(
  'tblite',
  type: 'boolean',
  value: true,
  description: 'Use tblite as xTB implementation',
)
