# This file is part of QCxMS.

srcs += files(
  'analyse.f90',
  'atomic_masses.f90',
  'boxmuller.f90',
  'callxtb.f90',
  'cid.f90',
  'cidcommon.f90',
  'common1.f90',
  'copyc6.f90',
  'covalent_radii.f90',
  'd3common.f90',
  'dftb.f90',
  'dftd3.f90',
  'dftd4.f90',
  'diag3x3.f90',
  'elem.f90',
  'fragments.f90',
  'gcp.f90',
  'geteps.f90',
  'iee.f90',
  'impact.f90',
  'info.f90',
  'iniqm.f90',
  'input.f90',
  'mass.f90',
  'md.f90',
  'mdinit.f90',
  'mndo.f90',
  'mopac.f90',
  'mo_energ.f90',
  'msindo.f90',
  'newcommon.f90',
  'orca.f90',
  'prmat.f90',
  'write_fragments.f90',
  'readcommon.f90',
  'readl.f90',
  'rotation.f90',
  'mo_spec.f90',
  'settings.f90',
  'snorm.f90',
  'tblite.f90',
  'timing.f90',
  'tm.f90',
  'utility.f90',
  'version.f90',
  'xtb_mctc_accuracy.f90',
  'xtb_mctc_constants.f90',
  'xtb_mctc_convert.f90',
  'xtb_mctc_symbols.f90',
  'xtb_mctc_resize.f90',
)

prog += files(
  'main.F90',
)
